# mine-agent

./: .env.example  .env.tdai  .gitignore  ARCHITECTURE.md  AUDIT.md  Dockerfile  Orchestra.spec  RAG_EVOLUTION_PLAN.md  README.md  REMEDIATION.md  build_exe.py  compose.yaml  desktop_entry.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  models.py  orchestrator.py  server.py  ws_manager.py
app/agents/: __init__.py  architect.py  backend_dev.py  base.py  bridge.py  frontend_dev.py  registry.py  schemas.py  scout.py  staged.py  tester.py
app/llm/: base.py  (+3 more)
assets/: agent-frameworks-comparison.md
langfuse/: docker-compose.yml
langgraph-agent/: .dockerignore  .env.example  .env.tdai  README.md  monitor_langfuse.py  pyproject.toml  requirements.txt
monitoring/: grafana-dashboard-langgraph-agent.json
public/: index.html
rag-pipeline/: Dockerfile  NEW_ARCHITECTURE_2026.md  OPTIMIZATION_PLAN.md  README.md  api.py  bm25_index.py  chunker.py  config.py  docker-compose.yml  embedder.py  evaluate.py  ingest.py  logger.py  parser.py  pii_filter.py  qdrant_store.py  query.py  query_rewriter.py  rag_pipeline.py  requirements.txt  reranker.py  setup_env.ps1  smoke_test.py  start_all.py  start_services.ps1  stop_services.ps1  test_api.py  test_query.py
scripts/: backup_restore_drill.py  benchmark_agent.py  cold_start_test.py  prewarm_ollama.ps1  provision_postgres_app_role.sql  rebuild_qdrant_vectors.py
src/: __main__.py  cli.py  config.py  config_validate.py  logging_config.py  main.py  metrics.py  shutdown.py  tdai_client.py
tests/: conftest.py  test_agent_failures.py  test_backup_restore_drill.py  test_integration.py  test_production_safety.py  test_rebuild_qdrant_vectors.py  test_security.py
webCrawler/: ANTI_SCRAPE_PLAN.md  README.md
(+41 files in other folders)
