[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-agent"
version = "1.0.0"
description = "Production-grade local Agent with LangGraph + OpenWebUI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=1.0.0",
    "langgraph-prebuilt>=1.0.0",
    "langgraph-checkpoint-postgres>=3.1.0,<4.0.0",
    "langchain>=1.0.0,<2.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "qdrant-client>=1.16.0,<1.17.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "python-multipart>=0.0.12",
    "rank-bm25>=0.2.0",
    "psutil>=6.0.0",
    "langfuse>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "prometheus-client>=0.21.0",
]

[project.scripts]
langgraph-agent = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
reranker = ["sentence-transformers>=3.0.0"]
otel = ["opentelemetry-instrumentation-langchain>=0.43.0"]
