[project]
name = "orchestra"
version = "0.3.0"
description = "Multi-Agent Orchestration Console (多智能体协同控制台)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
    "httpx>=0.28.0",
    "openai>=2.44.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "websockets>=16.1.1",
]
